Fri Jul 24 07:14:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Corrected gperf library name

Thu Jul 23 18:40:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3710_Regression_Test.cpp:
          Fixed fuzz error

Thu Jul 23 18:26:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_hpux_aCC.GNU:
          Added compiler flag to enable std98 support. Result of bugzilla 3709

Thu Jul 23 18:12:49 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/make_release.py:

          Fix small bug with specfile generation.

Thu Jul 23 16:40:55 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_string.cpp: Added some additional error checking to
          ACE_OS::strerror() to avoid problems when errnum is out of
          bounds.  Thanks to Aleksandar Vukajlovic <aleksandar dot
          vukajlovic at finsoft dot rs> for reporting this.

Thu Jul 23 18:10:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Removed invalid space

Thu Jul 23 17:57:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Updated for x.7.2

Thu Jul 23 17:47:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Thu Jul 23 17:46:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * etc/index.html:
        * docs/Download.html:
          Updated for the new release

        * bin/sets-manager.py:
          Fixed a typo

        * rpmbuild/ace-tao-ciao.spec:
          Fixed a wrong replacement by the release script

        * tests/Bug_3709_Regression_Test.cpp:
          New test to see which compilers can handle template template arguments

        * tests/Bug_3710_Regression_Test.cpp: